fix horizontal scroll

--- a/themes/hugo-uilite/static/css/styles.css
+++ b/themes/hugo-uilite/static/css/styles.css
@@ -437,4 +437,10 @@ section.pink {
   transition: bottom 300ms cubic-bezier(0.23, 1, 0.32, 1), transform 350ms 350ms cubic-bezier(0.23, 1, 0.32, 1);
   transition: bottom 300ms cubic-bezier(0.23, 1, 0.32, 1), transform 350ms 350ms cubic-bezier(0.23, 1, 0.32, 1), -webkit-transform 350ms 350ms cubic-bezier(0.23, 1, 0.32, 1);
 }
+
+html, body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
 /*# sourceMappingURL=styles.css.map */
